backend-helm-chart/postgress_database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: postgresdb
  name: postgresdb
  namespace: rental-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresdb
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: postgresdb
    spec:
      containers:
      - image: postgres:15
        name: postgres
        resources: {}
        ports:
           - containerPort: 5432
status: {}
